# Articurated2

./: .coveragerc  .env.example  .gitignore  API-SPECIFICATION.yml  CHAT_HISTORY.md  Dockerfile  Makefile  README.md  STORIES.md  TECHNICAL_PRD.md  Updated_PRD.md  WORKFLOW_DESIGN.md  alembic.ini  cli.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  technical_stories.md
.github/: CODE_PATTERNS.md  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  copilot-instructions.md  skills_v3.yml
.github/agents/: README.md  implementation_v3.yml  orchestrator_v3.yml  technical_story_v3.yml  validation_v3.yml
.github/workflows/: ci.yml  orchestrator_ci.yml  returns_workflow.yml
alembic/: env.py
app/: config.py  database.py  main.py
app/core/: logging.py  security.py
app/models/: base.py  order.py  return_request.py  state_history.py
app/schemas/: __init__.py  common.py  order.py  return_request.py  state_history.py
app/services/: audit_service.py  order_service.py  return_service.py  state_machine.py
app/tasks/: celery_app.py  invoice_tasks.py  notification_tasks.py  refund_tasks.py
app/utils/: email_sender.py  exceptions.py  invoice_generator.py  storage.py
cli/: __init__.py  adversarial_tests.py  logic_validator.py  pru_tracker.py  scope_validator.py
templates/emails/: order_confirmation.html  order_shipped.html  refund_processed.html  return_approved.html
tests/: conftest.py  factories.py  test_stories_test_001_orders_audit.py  test_stories_test_002_state_transitions.py  test_stories_test_003_invoice_idempotency.py
tests/e2e/: test_order_lifecycle.py
tests/integration/: test_order_api.py  test_return_api.py
tests/unit/: test_health.py  test_invoice_gen.py  test_metrics.py  test_order_service.py  (+1 more)
(+5 files in other folders)
